eglfs: Fix DRM+KMS backends

The native display was simply invalid.

Task-number: QTBUG-53225
Change-Id: I682fb1d91dbea3dab971a079060d181fc313da46
Reviewed-by: Robert Griebl <robert.griebl@pelagicore.com>

cregit: 834087c3242cbb3d85a5b8b155788a368f09b836 https://github.com/qt/qtbase/commit/834087c3242cbb3d85a5b8b155788a368f09b836