src/plugins/platforms/eglfs/deviceintegration/eglfs_kms/qeglfskmsgbmdevice.cpp
@@ -1,10 +1,10 @@
 DECL|function|QEglFSKmsGbmDevice
 DECL|function|close
 DECL|function|createScreen
-DECL|function|device
 DECL|function|gbmDevice
 DECL|function|globalCursor
 DECL|function|handleDrmEvent
+DECL|function|nativeDisplay
 DECL|function|open
 DECL|function|pageFlipHandler
 DECL|macro|ARRAY_LENGTH
