src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_egldevice/qeglfskmsegldevice.cpp
@@ -1,5 +1,5 @@
 DECL|function|QEglFSKmsEglDevice
 DECL|function|close
 DECL|function|createScreen
-DECL|function|device
+DECL|function|nativeDisplay
 DECL|function|open
