src/plugins/platforms/eglfs/deviceintegration/eglfs_kms_egldevice/qeglfskmsegldevice.h
@@ -53,7 +53,7 @@ name|Q_DECL_OVERRIDE
 block|;
 name|virtual
 name|EGLNativeDisplayType
-name|device
+name|nativeDisplay
 argument_list|()
 specifier|const
 name|Q_DECL_OVERRIDE
